--- a/index.html
+++ b/index.html
@@ -5,48 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="stylesheet" href="/dist/output.css">
     <title>Mail Template 1</title>
 </head>
 
 <body>
 
-    <div class="container">
-        <div class="card">
-            <div class="logo">
+    <div class="container" style="width: 100%; height: 100%;">
+        <div class="card" style="
+            margin-top: 4rem;
+            width: 800px;
+            height: 500px;
+            background: #ffffff;
+            margin: auto;
+            padding: 2rem;
+            border-radius: 10px;
+            max-width: 100%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        ">
+            <div class="logo" style="width: 100px;">
                 <img src="./logo.svg" alt="" srcset="">
             </div>
-            <div class="header">
-                <h1>Your PHA Account has been registered successfully.</h1>
+            <div class="header" style="width: 500px; text-align: center;">
+                <h1 style="text-align: center; margin-top: 1rem; font-size: 2rem; line-height: 2rem; font-weight: 700;">
+                    Your PHA Account has been registered successfully.</h1>
             </div>
-            <div class="text">
-                <p class="text-3xl font-bold underline">Hi [User]
+            <div class="text" style="margin-top: 1rem; width: 600px; text-align: center;">
+                <p>Hi [User]
 
                     Welcome to NITEL Prepaid Housing Advance (PHA). From now on you can be
                     able to get a housing advance for 3 months once applied for. To get started
                     login to PHA using the credentials provided below. </p>
             </div>
-            <div class="table">
-                <table>
+            <div class="table" style="margin-top: .5rem;">
+                <table style="width: 400px; border: 1px solid #ebebeb;">
                     <thead>
                         <tr>
-                            <th>Entitled Amount</th>
-                            <th>Applied Amount</th>
+                            <th style="padding: 10px; background-color: #10988d; color: #fff; text-align: left;">Entitled Amount</th>
+                            <th style="padding: 10px; background-color: #10988d; color: #fff; text-align: left;">Applied Amount</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>MK200,000</td>
-                            <td>MK120,000</td>
+                            <td style="padding: 10px; border: 1px solid #ebebeb;">MK200,000</td>
+                            <td style="padding: 10px; border: 1px solid #ebebeb;">MK120,000</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div>
-                <button class="button">login to PHA</button>
+                <button class="button" style=" align-items: center; background-color: #15b1a5; margin-top: 3rem; border: 0; border-radius: 100px; box-sizing: border-box;
+                color: #ffffff; cursor: pointer; display: inline-flex; font-size: 16px; font-weight: 600; justify-content: center; line-height: 20px;
+                max-width: 480px; min-height: 40px; min-width: 0px; overflow: hidden; padding: 0px; padding-left: 20px; padding-right: 20px; text-align: center;
+                touch-action: manipulation; user-select: none; -webkit-user-select: none; vertical-align: middle;">login to PHA</button>
             </div>
-            <div class="link">
+            <div class="link" style="margin-top: 1rem;">
                 <p>PHA by <a href="http://">Fintech</a></p>
             </div>
         </div>
